package modelo;

public enum EstadoActividad {
    INICIO,
    PROCESO,
    FINALIZADO
}
