package modelo;

public enum TipoActividad {
    TAREA,
    EVALUACION
}
