@startuml
skinparam classAttributeIconSize 0

class Estudiante {
  - nombre : String
  - codigo : String
  - cursos : List<Curso>
  + getCursos() : List<Curso>
}

class Curso {
  - id : String
  - nombre : String
  - docente : String
  - actividades : List<ActividadAcademica>
  + getActividades() : List<ActividadAcademica>
}

abstract class ActividadAcademica {
  - id : String
  - titulo : String
  - descripcion : String
  - fechaEntrega : LocalDate
  - prioridad : Prioridad
  - estado : EstadoActividad
  - fechaRegistro : LocalDate
  - cursoId : String
  + estaVencida() : boolean
  + getTipoActividad() : TipoActividad
  + getResumenVisual() : String
}

class TareaAcademica
class EvaluacionAcademica
class SistemaAcademico
class ServicioCursos
class ServicioActividades
class ServicioEntropia
class ActividadFunciones <<functional>>
class EntropiaFuncional <<functional>>
class ResultadoEntropia

enum Prioridad {
  BAJA
  MEDIA
  ALTA
}

enum EstadoActividad {
  INICIO
  PROCESO
  FINALIZADO
}

enum TipoActividad {
  TAREA
  EVALUACION
}

Estudiante "1" o-- "*" Curso
Curso "1" o-- "*" ActividadAcademica
ActividadAcademica <|-- TareaAcademica
ActividadAcademica <|-- EvaluacionAcademica
ActividadAcademica --> Prioridad
ActividadAcademica --> EstadoActividad
ActividadAcademica --> TipoActividad

SistemaAcademico --> ServicioCursos
SistemaAcademico --> ServicioActividades
SistemaAcademico --> ServicioEntropia
ServicioCursos --> Estudiante
ServicioActividades --> ServicioCursos
ServicioActividades ..> ActividadFunciones
ServicioEntropia ..> ActividadFunciones
ServicioEntropia ..> EntropiaFuncional
EntropiaFuncional --> ResultadoEntropia
@enduml
